--- a/README.Rmd
+++ b/README.Rmd
@@ -62,11 +62,11 @@ getting some specific variables quickly, I suggest using the `rscorecard` packag
 # Installation
 
 You can also download the datasets as an R package.
-The size of the `data` folder is 138.1 MB, so it might take a while to install and load into memory.
+The size of the `data` folder is 138.1 MB, so it might take a while to install and load into memory. To download the most recent stable release, use
 
 ```R
 # install.packages("devtools")
-devtools::install_github("jjchern/scorecard")
+devtools::install_github("jjchern/scorecard@v0.2.1")
 
 # To uninstall the package, use:
 # remove.packages("scorecard")
